--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body>
+    <div class="page">
+      <header class="header">
+        <img class="header__image" src="./images/Vector.png" alt="Logo" />
+      </header>
+      <main class="content">
+        <section class="profile">
+          <img src="./images/jacques cousteau.jpg" alt="foto de perfil" />
+          <div>
+            <h2 class="profile__title">Jacques Cousteau</h2>
+            <p class="profile__subtitle">Explorador</p>
+          </div>
+
+          <div class="profile__info">
+            <button clas=" profile__edit_button">
+              <img src="./images/Edit_profile.png" alt="vecto de lapiz" />
+            </button>
+          </div>
+          <button class="profile__butto">
+            <img src="./images/boton_cruz.png" alt="cruz de boton" />
+          </button>
+        </section>
+      </main>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
