nueva actulizacion de mi proyecto

--- a/index.html
+++ b/index.html
@@ -13,26 +13,136 @@
     <div class="page">
       <header class="header">
         <img class="header__image" src="./images/Vector.png" alt="Logo" />
+        <div class="header__line"></div>
       </header>
       <main class="content">
         <section class="profile">
-          <img src="./images/jacques cousteau.jpg" alt="foto de perfil" />
-          <div>
-            <h2 class="profile__title">Jacques Cousteau</h2>
-            <p class="profile__subtitle">Explorador</p>
-          </div>
+          <img
+            class="profile_image"
+            src="./images/jacques cousteau.jpg"
+            alt="foto de perfil"
+          />
 
           <div class="profile__info">
-            <button clas=" profile__edit_button">
-              <img src="./images/Edit_profile.png" alt="vecto de lapiz" />
+            <div>
+              <h2 class="profile__title">Jacques Cousteau</h2>
+              <p class="profile__subtitle">Explorador</p>
+            </div>
+            <button class="profile__edit-button">
+              <img
+                class="profile__edit-image"
+                src="./images/Edit_profile.png"
+                alt="Vector de lapiz"
+              />
             </button>
           </div>
-          <button class="profile__butto">
-            <img src="./images/boton_cruz.png" alt="cruz de boton" />
+          <button class="profile__add-button">
+            <img
+              class="profile__image-button"
+              src="./images/boton_cruz.png"
+              alt="cruz de boton"
+            />
           </button>
+        </section>
+        <section class="elements">
+          <div class="element">
+            <img
+              class="element__image"
+              src="./images/kirill-pershin-1088404-unsplash.jpg"
+              alt="valle yosemite"
+            />
+            <div class="element__text">
+              <p class="element__title">Valle de Yosemite</p>
+              <img
+                class="element__like"
+                src="./images/corazon.svg"
+                alt="like"
+              />
+            </div>
+          </div>
+          <div class="element">
+            <img
+              class="element__image"
+              src="./images/lago luis.png"
+              alt="Lago Louise"
+            />
+            <div class="element__text">
+              <p class="element__title">Lago Louise</p>
+              <img
+                class="element__like"
+                src="./images/corazon.svg"
+                alt="like"
+              />
+            </div>
+          </div>
+          <div class="element">
+            <img
+              class="element__image"
+              src="./images/Montañas calvas.jpg"
+              alt="Montañas Calvas"
+            />
+            <div class="element__text">
+              <p class="element__title">Montañas Calvas</p>
+              <img
+                class="element__like"
+                src="./images/corazon.svg"
+                alt="like"
+              />
+            </div>
+          </div>
+          <div class="element">
+            <img
+              class="element__image"
+              src="./images/Latemar.jpg"
+              alt="Latemar"
+            />
+            <div class="element__text">
+              <p class="element__title">Latemar</p>
+              <img
+                class="element__like"
+                src="./images/corazon.svg"
+                alt="like"
+              />
+            </div>
+          </div>
+          <div class="element">
+            <img
+              class="element__image"
+              src="./images/Vanois National.jpg"
+              alt="valle yosemite"
+            />
+            <div class="element__text">
+              <p class="element__title">Vanois National...</p>
+              <img
+                class="element__like"
+                src="./images/corazon.svg"
+                alt="like"
+              />
+            </div>
+          </div>
+          <div class="element">
+            <img
+              class="element__image"
+              src="./images/Lago di braises.jpg"
+              alt="valle yosemite"
+            />
+            <div class="element__text">
+              <p class="element__title">Lago di Braies</p>
+              <img
+                class="element__like"
+                src="./images/corazon.svg"
+                alt="like"
+              />
+            </div>
+          </div>
+
+          </div>
         </section>
       </main>
     </div>
     <script src="./index.js"></script>
   </body>
+  <footer class="footer">
+    <p class="footer__text">@ whiter landiez</p>
+  </footer>
 </html>
