--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Alrededor de los EEUU</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <body>
+  <body class="body">
+    <div class="body__overlay"></div>
     <div class="page">
       <header class="header">
         <img class="header__image" src="./images/Vector.png" alt="Logo" />
@@ -135,12 +136,31 @@
               />
             </div>
           </div>
-
           </div>
+        </section>
+        <section class="forms">
+          <h2 class="forms__title">Editar perfil</h2>
+          <form class="form">
+            <fieldset class="form__edit">
+              <input class="form__input" type="text"
+              id="name"
+              placeholder="Nombre"
+              required>
+
+              <input class="form__input" type="text"
+              id="name"
+              placeholder="Acerca de mi"
+              required>
+            </fieldset>
+            <button class="forms__submit-button">Guardar</button>
+            <button class="forms__close-button"><img   class="forms__image-button" src="../web_project_around/images/formn image.svg" alt=""></button>
+          </form>
         </section>
       </main>
     </div>
-    <script src="./index.js"></script>
+  <script>
+
+  </script>
   </body>
   <footer class="footer">
     <p class="footer__text">@ whiter landiez</p>
