actulizacion de media queris

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             src="./images/jacques cousteau.jpg"
             alt="foto de perfil"
           />
-
           <div class="profile__info">
-            <div>
+            <div class="profile__info-container">
               <h2 class="profile__title">Jacques Cousteau</h2>
               <p class="profile__subtitle">Explorador</p>
             </div>
