" nueva actulizacion de js"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="body">
-    <div class="body__overlay" id="body__overlay"></div>
+
     <div class="page">
       <header class="header">
         <img class="header__image" src="./images/Vector.png" alt="Logo" />
@@ -137,17 +137,19 @@
           </div>
           </div>
         </section>
+        <div class="pupop">
+          <div class="body__overlay" id="body__overlay"></div>
         <div class="forms" id="forms">
           <h2 class="forms__title">Editar perfil</h2>
           <form class="form">
             <fieldset class="form__edit">
               <input class="form__input" type="text"
-              id="name"
+              id="nombre"
               placeholder="Nombre"
               >
 
               <input class="form__input" type="text"
-              id="acer_de_mi"
+              id="job_info"
               placeholder="Acerca de mi"
               >
             </fieldset>
@@ -155,6 +157,7 @@
             <button class="forms__close-button"><img   class="forms__image-button" src="../web_project_around/images/formn image.svg" alt=""></button>
           </form>
         </div>
+      </div>
       </main>
     </div>
   <script src="./scripts/index.js"></script>
