nueva actulizacion de mi proyecto

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Alrededor de los EEUU</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <body class="body">
-
+  <body>
     <div class="page">
       <header class="header">
         <img class="header__image" src="./images/Vector.png" alt="Logo" />
@@ -137,8 +136,8 @@
           </div>
           </div>
         </section>
-        <div class="pupop">
-          <div class="body__overlay" id="body__overlay"></div>
+        <div class="popup">
+          <div class="popup__overlay"></div>
         <div class="forms" id="forms">
           <h2 class="forms__title">Editar perfil</h2>
           <form class="form">
@@ -147,7 +146,6 @@
               id="nombre"
               placeholder="Nombre"
               >
-
               <input class="form__input" type="text"
               id="job_info"
               placeholder="Acerca de mi"
