--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </section>
         <div class="popup">
           <div class="popup__overlay"></div>
-        <div class="forms" id="forms">
+        <div class="forms" >
           <h2 class="forms__title">Editar perfil</h2>
           <form class="form">
             <fieldset class="form__edit">
