Correccion de erores W3C

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="profile">
           <img
             class="profile_image"
-            src="./images/jacques cousteau.jpg"
+            src="./images/jacques-cousteau.jpg"
             alt="foto de perfil"
           />
           <div class="profile__info">
@@ -62,7 +62,7 @@
           <div class="element">
             <img
               class="element__image"
-              src="./images/lago luis.png"
+              src="./images/lago_luis.png"
               alt="Lago Louise"
             />
             <div class="element__text">
@@ -77,7 +77,7 @@
           <div class="element">
             <img
               class="element__image"
-              src="./images/Montañas calvas.jpg"
+              src="./images/Montañas-calvas.jpg"
               alt="Montañas Calvas"
             />
             <div class="element__text">
@@ -107,7 +107,7 @@
           <div class="element">
             <img
               class="element__image"
-              src="./images/Vanois National.jpg"
+              src="./images/Vanois-National.jpg"
               alt="valle yosemite"
             />
             <div class="element__text">
@@ -122,7 +122,7 @@
           <div class="element">
             <img
               class="element__image"
-              src="./images/Lago di braises.jpg"
+              src="./images/Lago-di-braises.jpg"
               alt="valle yosemite"
             />
             <div class="element__text">
@@ -134,33 +134,42 @@
               />
             </div>
           </div>
-          </div>
         </section>
         <div class="popup">
           <div class="popup__overlay"></div>
-        <div class="forms" >
-          <h2 class="forms__title">Editar perfil</h2>
-          <form class="form">
-            <fieldset class="form__edit">
-              <input class="form__input" type="text"
-              id="nombre"
-              placeholder="Nombre"
-              >
-              <input class="form__input" type="text"
-              id="job_info"
-              placeholder="Acerca de mi"
-              >
-            </fieldset>
-            <button class="forms__submit-button">Guardar</button>
-            <button class="forms__close-button"><img   class="forms__image-button" src="../web_project_around/images/formn image.svg" alt=""></button>
-          </form>
+          <div class="forms">
+            <h2 class="forms__title">Editar perfil</h2>
+            <form class="form">
+              <fieldset class="form__edit">
+                <input
+                  class="form__input"
+                  type="text"
+                  id="nombre"
+                  placeholder="Nombre"
+                />
+                <input
+                  class="form__input"
+                  type="text"
+                  id="job_info"
+                  placeholder="Acerca de mi"
+                />
+              </fieldset>
+              <button class="forms__submit-button">Guardar</button>
+              <button class="forms__close-button">
+                <img
+                  class="forms__image-button"
+                  src="./images/formn_image.svg"
+                  alt=""
+                />
+              </button>
+            </form>
+          </div>
         </div>
-      </div>
       </main>
+      <footer class="footer">
+        <p class="footer__text">@ whiter landiez</p>
+      </footer>
     </div>
-  <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
-  <footer class="footer">
-    <p class="footer__text">@ whiter landiez</p>
-  </footer>
 </html>
