Actulizacopn de propiedas para los estilos se agrego redme

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               alt="valle yosemite"
             />
             <div class="element__text">
-              <p class="element__title">Vanois National...</p>
+              <p class="element__title">Vanois National</p>
               <img
                 class="element__like"
                 src="./images/corazon.svg"
