nuevo popup para agregar cards

--- a/index.html
+++ b/index.html
@@ -135,6 +135,35 @@
             </div>
           </div>
         </section>
+        <dialog class="forms" id="popup__new-places">
+          <div class="forms">
+            <h2 class="forms__title">Nuevos Lugares</h2>
+            <form class="form">
+              <fieldset class="form__edit">
+                <input
+                  class="form__input"
+                  type="text"
+                  id="Titulo"
+                  placeholder="Titulo"
+                />
+                <input
+                  class="form__input"
+                  type="text"
+                  id="photo_info"
+                  placeholder="Enlace de la imagen"
+                />
+              </fieldset>
+              <button class="forms__submit-button">Guardar</button>
+              <button class="forms__close-button">
+                <img
+                  class="forms__image-button"
+                  src="./images/formn_image.svg"
+                  alt=""
+                />
+              </button>
+            </form>
+          </div>
+        </dialog>
         <div class="popup">
           <div class="popup__overlay"></div>
           <div class="forms">
