--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
                 src="./images/corazon.svg"
                 alt="like"
               />
+              <img
+                class="element__like active"
+                id="like-active"
+                src="./images/like_active.png"
+                alt="like activo"
+              />
+              <button class="element__trash">
+                <img src="./images/Trash.png" alt="eliminar" />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -72,6 +81,15 @@
                 src="./images/corazon.svg"
                 alt="like"
               />
+              <img
+                class="element__like active"
+                id="like-active"
+                src="./images/like_active.png"
+                alt="like activo"
+              />
+              <button class="element__trash">
+                <img src="./images/Trash.png" alt="eliminar" />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -87,6 +105,15 @@
                 src="./images/corazon.svg"
                 alt="like"
               />
+              <img
+                class="element__like active"
+                id="like-active"
+                src="./images/like_active.png"
+                alt="like activo"
+              />
+              <button class="element__trash">
+                <img src="./images/Trash.png" alt="eliminar" />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -102,6 +129,15 @@
                 src="./images/corazon.svg"
                 alt="like"
               />
+              <img
+                class="element__like active"
+                id="like-active"
+                src="./images/like_active.png"
+                alt="like activo"
+              />
+              <button class="element__trash">
+                <img src="./images/Trash.png" alt="eliminar" />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -117,6 +153,15 @@
                 src="./images/corazon.svg"
                 alt="like"
               />
+              <img
+                class="element__like active"
+                id="like-active"
+                src="./images/like_active.png"
+                alt="like activo"
+              />
+              <button class="element__trash">
+                <img src="./images/Trash.png" alt="eliminar" />
+              </button>
             </div>
           </div>
           <div class="element">
@@ -132,6 +177,15 @@
                 src="./images/corazon.svg"
                 alt="like"
               />
+              <img
+                class="element__like active"
+                id="like-active"
+                src="./images/like_active.png"
+                alt="like activo"
+              />
+              <button class="element__trash">
+                <img src="./images/Trash.png" alt="eliminar" />
+              </button>
             </div>
           </div>
         </section>
