funcionalidad de boton para cerrar el popup

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
           <dialog class="popup_dialog">
             <img class="popup__img" src="" />
             <div class="popup__description"></div>
+            <button class="popup__close-button">
+              <img
+                class="forms__image-button"
+                src="./images/formn_image.svg"
+                alt=""
+              />
+            </button>
           </dialog>
         </section>
         <div class="popup">
