actulizacion boton para cerrar popup

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </button>
           </dialog>
         </section>
-        <dialog class="forms" id="popup__new-places">
+        <dialog class="dialog" id="popup__new-places">
           <div class="forms">
             <h2 class="forms__title">Nuevos Lugares</h2>
             <form class="form">
@@ -117,7 +117,7 @@
                 />
               </fieldset>
               <button class="forms__submit-button">Guardar</button>
-              <button class="forms__close-button">
+              <button class="forms__close-button" title="cerrar">
                 <img
                   class="forms__image-button"
                   src="./images/formn_image.svg"
