--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             </button>
           </dialog>
         </section>
-        <dialog class="forms" id="popup__new-places">
+        <dialog class="form__dialog" id="popup__new-places">
           <div class="forms">
-            <h2 class="forms__title">Nuevos Lugares</h2>
-            <form class="form">
+            <h2 class="forms__title">Nuevo Lugar</h2>
+            <form class="form" id="create-card">
               <fieldset class="form__edit">
                 <input
                   class="form__input"
@@ -86,7 +86,7 @@
                   placeholder="Enlace de la imagen"
                 />
               </fieldset>
-              <button class="forms__submit-button">Guardar</button>
+              <button class="forms__submit-button">Crear</button>
               <button class="forms__close-button">
                 <img
                   class="forms__image-button"
