actulizacion estilos de botones y cards

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <section class="profile">
           <img
             class="profile_image"
-            src="./images/jacques-cousteau.jpg"
+            src="./images/Ride.jpg"
             alt="foto de perfil"
           />
           <div class="profile__info">
             <div class="profile__info-container">
-              <h2 class="profile__title">Jacques Cousteau</h2>
-              <p class="profile__subtitle">Explorador</p>
+              <h2 class="profile__title">Whiter Landinez</h2>
+              <p class="profile__subtitle">Piloto de Moto velocidad</p>
             </div>
             <button class="profile__edit-button" title="Editar perfil">
               <img
@@ -70,13 +70,13 @@
         </section>
         <dialog class="form__dialog" id="popup__new-places">
           <div class="forms">
-            <h2 class="forms__title">Nuevo Lugar</h2>
+            <h2 class="forms__title">Nueva moto</h2>
             <form class="form" id="create-card">
               <fieldset class="form__edit">
                 <input
                   class="form__input"
                   type="text"
-                  id="Titulo"
+                  id="titulo"
                   placeholder="Titulo"
                 />
                 <input
