--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
           </template>
           <dialog class="popup_dialog">
-            <img class="popup__img" src="" />
+            <img class="popup__img" src="" alt="" />
             <div class="popup__description"></div>
             <button class="popup__close-button" title="cerrar">
               <img
@@ -145,7 +145,7 @@
         </div>
       </main>
       <footer class="footer">
-        <p class="footer__text">@ whiter landiez</p>
+        <p class="footer__text">&#174; whiter landiez</p>
       </footer>
     </div>
     <script src="./scripts/index.js"></script>
