--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <input
                   required
                   class="form__input"
-                  type="text"
+                  type="url"
                   id="photo_info"
                   placeholder="Enlace de la imagen"
                 />
@@ -97,7 +97,6 @@
                 >
               </fieldset>
               <button
-                disabled
                 class="forms__submit-button"
                 type="submit"
                 title="Crear tarjeta nueva "
@@ -152,7 +151,6 @@
                 >
               </fieldset>
               <button
-                disabled
                 class="forms__submit-button"
                 id="perfil-button"
                 title="Guardar cambios"
@@ -179,5 +177,6 @@
       </footer>
     </div>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
