--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
               <fieldset class="form__edit">
                 <input
                   required
+                  name="name"
                   class="form__input"
                   type="text"
                   id="nombre"
@@ -134,7 +135,7 @@
                   minlength="2"
                   maxlength="40"
                 />
-                <span id="nombre-error" class="form__input-error"
+                <span id="name-error" class="form__input-error"
                   >Este campo es obligatorio</span
                 >
                 <input
@@ -176,7 +177,6 @@
         <p class="footer__text">&#174; whiter landiez</p>
       </footer>
     </div>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
