Actulizacion de validcaion y reset de formularios

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 ></span>
               </fieldset>
               <button
+                disabled
                 class="forms__submit-button"
                 type="submit"
                 title="Crear tarjeta nueva "
@@ -163,6 +164,7 @@
                 ></span>
               </fieldset>
               <button
+                disabled
                 class="forms__submit-button"
                 id="perfil-button"
                 title="Guardar cambios"
