Agrado de class FormValidator

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   class="form__input"
                   type="text"
                   id="titulo"
-                  placeholder="Titulo"
+                  placeholder="Nueva moto"
                   minlength="2"
                   maxlength="30"
                 />
