actulizacion de modulos js y hotfix de css y html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <span
                   name="titulo-error"
                   id="titulo-error"
-                  class="form__input-error"
+                  class="form__input-error-span"
                 ></span>
                 <input
                   required
@@ -99,7 +99,7 @@
                 <span
                   name="photo_info-error"
                   id="photo_info-error"
-                  class="form__input-error"
+                  class="form__input-error-span"
                 ></span>
               </fieldset>
               <button
@@ -145,7 +145,7 @@
                 <span
                   name="name-error"
                   id="name-error"
-                  class="form__input-error"
+                  class="form__input-error-span"
                 ></span>
                 <input
                   required
@@ -160,7 +160,7 @@
                 <span
                   name="job_info-error"
                   id="job_info-error"
-                  class="form__input-error"
+                  class="form__input-error-span"
                 ></span>
               </fieldset>
               <button
