--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </form>
           </div>
         </dialog>
-        <div class="popup">
+        <div class="popup" id="popupProfile">
           <div class="popup__overlay"></div>
           <div class="forms">
             <h2 class="forms__title">Editar perfil</h2>
