agregado de clases y funcianalidades para fomularios, render de tarjetas

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <dialog class="popup_dialog">
             <img class="popup__img" src="" alt="" />
             <div class="popup__description"></div>
-            <button class="popup__close-button" title="cerrar">
+            <button class="close__button popup__close-button" title="cerrar">
               <img
                 class="forms__image-button"
                 src="./images/formn_image.svg"
@@ -112,7 +112,7 @@
                 Crear
               </button>
               <button
-                class="forms__close-button"
+                class="forms__close-button close__button"
                 id="place-close-button"
                 title="cerrar"
                 type="button"
@@ -172,7 +172,7 @@
                 Guardar
               </button>
               <button
-                class="forms__close-button forms-profile-button"
+                class="forms__close-button close__button forms-profile-button"
                 title="cerrar"
                 type="button"
               >
