--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
       </header>
       <main class="content">
         <section class="profile">
-          <img
-            class="profile_image"
-            src="./images/Ride.jpg"
-            alt="foto de perfil"
-          />
+          <button class="profile_avatar">
+            <img
+              class="profile__edit-avatar"
+              src="./images/lapiz.svg"
+              alt="Vector de lapiz"
+            />
+            <img
+              class="profile_image"
+              src="./images/Ride.jpg"
+              alt="foto de perfil"
+            />
+          </button>
+
           <div class="profile__info">
             <div class="profile__info-container">
               <h2 class="profile__title">Whiter Landinez</h2>
@@ -42,40 +50,42 @@
               alt="cruz de boton"
             />
           </button>
-          <dialog>
-            <div class="popup__overlay"></div>
-          <div class="forms">
-            <h2 class="forms__title">Cambiar foto de perfil</h2>
-            <form class="form" id="form_edit-avatar">
-              <fieldset class="form__edit">
-                <input
-                  required
-                  name="name"
-                  class="form__input"
-                  type="text"
-                  id="nombre"
-                  placeholder="foto de perfil"
-                  minlength="2"
-                  maxlength="40"
-                />
-                <span
-                  name="name-error"
-                  id="name-error"
-                  class="form__input-error-span"
-                ></span>
-                <button
-                disabled
-                class="forms__submit-button"
-                id="perfil-button"
-                title="Guardar cambios"
-              >
-                Guardar
-              </button>
+          <dialog class="form__dialog" id="avatar_edit-profile">
+            <div class="forms">
+              <h2 class="forms__title">Cambiar foto de perfil</h2>
+              <form class="form" id="form_edit-avatar">
+                <fieldset class="form__edit">
+                  <input
+                    required
+                    name="name"
+                    class="form__input"
+                    type="text"
+                    id="nombre"
+                    placeholder="foto de perfil"
+                    minlength="2"
+                    maxlength="40"
+                  />
+                  <span
+                    name="name-error"
+                    id="name-error"
+                    class="form__input-error-span"
+                  ></span>
+                  <button
+                    disabled
+                    class="forms__submit-button"
+                    id="perfil-button"
+                    title="Guardar cambios"
+                  >
+                    Guardar
+                  </button>
+                </fieldset>
+              </form>
               <button
                 class="forms__close-button close__button forms-profile-button"
                 title="cerrar"
                 type="button"
-              >
+              ></button>
+            </div>
           </dialog>
         </section>
         <section class="elements">
