agregado de instancia avatarpara cambiara foto de perfil

--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@
                 <fieldset class="form__edit">
                   <input
                     required
-                    name="name"
+                    name="avatar"
                     class="form__input"
-                    type="text"
-                    id="nombre"
+                    type="url"
+                    id="avatar"
                     placeholder="foto de perfil"
                     minlength="2"
-                    maxlength="40"
                   />
                   <span
                     name="name-error"
-                    id="name-error"
+                    id="avatar-error"
                     class="form__input-error-span"
                   ></span>
                   <button
