--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="forms">
             <h2 class="forms__title">¿Estás seguro/a?</h2>
             <button
-              class="forms__submit-button close__button"
+              class="forms__submit-button"
               id="confirmation-button"
               title="confirma eliminacion"
             >
