nueva actulizacion fitback de carga

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               id="confirmation-button"
               title="confirma eliminacion"
             >
-              si
+              Sin miedo al Exito !!!
             </button>
             <button
               id="delete_close_button"
